argocd/deployments.yaml
############################################
# DATA-SPACE STATEFULSETS / DEPLOYMENTS
############################################
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: data-space
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  serviceName: mongo
  replicas: 2
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
               - matchExpressions:
                   - key: workload
                     operator: In
                     values:
                       - app
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
                 matchLabels:
                   app: mongo
               topologyKey: kubernetes.io/hostname
      containers:
      - name: mongo
        image: 038774803581.dkr.ecr.eu-west-2.amazonaws.com/mongo:v1
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: mongo-gp3
      resources:
        requests:
          storage: 5Gi
---
##MYSQL
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: data-space   
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  serviceName: mysql
  replicas: 2
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
               - matchExpressions:
                   - key: workload
                     operator: In
                     values:
                       - app
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
                 matchLabels:
                   app: mysql
               topologyKey: kubernetes.io/hostname
      containers:
        - name: mysql
          image: 038774803581.dkr.ecr.eu-west-2.amazonaws.com/mysql:v1
          ports:
            - containerPort: 3306
              name: mysql
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
              subPath: mysql
          serviceAccountName: mysql-sa 
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  mysqladmin ping \
                    -h 127.0.0.1 \
                    -u root \
                    -p"$MYSQL_ROOT_PASSWORD" \
                    --silent
            initialDelaySeconds: 120
            periodSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: mysql-gp3
        resources:
          requests:
            storage: 5Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  namespace: data-space
spec:
  serviceName: "redis"
  replicas: 2
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
               - matchExpressions:
                   - key: workload
                     operator: In
                     values:
                       - app
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
                 matchLabels:
                   app: redis
               topologyKey: kubernetes.io/hostname
      containers:
      - name: redis
        image: redis:6.2
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: "100m"
            memory: "190Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
        volumeMounts:
       
        - name: redis-config
          mountPath: /usr/local/etc/redis/redis.conf
          subPath: redis.conf

        - name: redis-data
          mountPath: /data

        command:
        - sh
        - -c
        - |
          redis-server /usr/local/etc/redis/redis.conf \
          --appendonly yes

      volumes:
      - name: redis-config
        configMap:
          name: redis-config

  volumeClaimTemplates:
  - metadata:
      name: redis-data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: redis-gp3
      resources:
        requests:
          storage: 10Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  namespace: data-space
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
               - matchExpressions:
                   - key: workload
                     operator: In
                     values:
                       - app
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
                 matchLabels:
                   app: rabbitmq
               topologyKey: kubernetes.io/hostname
      containers:
      - name: rabbitmq
        image: rabbitmq:3.8-management-alpine
        ports:
        - containerPort: 5672
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
# APP-SPACE DEPLOYMENTS 

apiVersion: apps/v1
kind: Deployment
metadata:
  name: robotshop-cart
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: robot-app-cart
        image: 038774803581.dkr.ecr.eu-west-2.amazonaws.com/cart:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robotshop-catalogue
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue
  template:
    metadata:
      labels:
        app: catalogue
    spec:
      containers:
      - name: robot-app-catalogue
        image: 038774803581.dkr.ecr.eu-west-2.amazonaws.com/catalogue:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robotshop-dispatch
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dispatch
  template:
    metadata:
      labels:
        app: dispatch
    spec:
      containers:
      - name: robot-app-dispatch
        image: 038774803581.dkr.ecr.eu-west-2.amazonaws.com/dispatch:v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robotshop-shipping
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
    spec:
      containers:
        - name: robot-app-shipping
          image: 038774803581.dkr.ecr.eu-west-2.amazonaws.com/shipping:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"

          startupProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 18

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 20
            failureThreshold: 3

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: robotshop-payment
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robotshop-payment
  template:
    metadata:
      labels:
        app: robotshop-payment
    spec:
      containers:
      - name: robot-app-payment
        image: 038774803581.dkr.ecr.eu-west-2.amazonaws.com/payment:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robotshop-ratings
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robotshop-ratings
  template:
    metadata:
      labels:
        app: robotshop-ratings
    spec:
      containers:
      - name: robot-app-ratings
        image: 038774803581.dkr.ecr.eu-west-2.amazonaws.com/ratings:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robotshop-user
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: robot-app-user
        image: 038774803581.dkr.ecr.eu-west-2.amazonaws.com/user:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      version: v1
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      containers:
        # ===============================
        # NGINX FRONT PROXY (SIDE CAR)
        # ===============================
        - name: web-nginx
          image: nginx:1.21.6
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "50Mi"
            limits:
              cpu: "100m"
              memory: "100Mi"
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d


        # ===============================
        # EXISTING WEB CONTAINER
        # ===============================
        - name: robot-app-web
          image: 038774803581.dkr.ecr.eu-west-2.amazonaws.com/web:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "60Mi"
            limits:
              cpu: "200m"
              memory: "100Mi"

      volumes:
        - name: nginx-config
          configMap:
            name: web-nginx-config



###IRSA for shipping pod so it can access AWS Secrets Manager

#resource "aws_iam_role" "shipping_irsa" {
#name = "iam-secrets-access"

# assume_role_policy = jsonencode({
# Version = "2012-10-17"
#  Statement = [
#  {
#   Effect = "Allow"
# Principal = {
#   Federated = "${aws_iam_openid_connect_provider.eks.arn}"
#  }
#  Action = "sts:AssumeRoleWithWebIdentity"
# Condition = {
#  StringEquals = {
#    "${replace(aws_iam_openid_connect_provider.eks.url, "https://", "")}:sub" = "system:serviceaccount:app-space:shipping_sa",
#  "${replace(aws_iam_openid_connect_provider.eks.url, "https://", "")}:aud" = "sts.amazonaws.com"
#  }
# }
#}
#]
# })
#}


#resource "aws_iam_policy" "shipping_secrets_policy" {
# name = "shipping-secrets-manager-access"

# policy = jsonencode({
# Version = "2012-10-17"
# Statement = [
#  {
# Effect = "Allow"
# Action = [
#  "secretsmanager:GetSecretValue",
# #  "secretsmanager:DescribeSecret"
#]
# Resource = "arn:aws:secretsmanager:eu-west-2:*:secret:robotshop/shipping/*"
# }
#]
#})
#}

#resource "aws_iam_role_policy_attachment" "shipping_policy_irsa" {
# role       = aws_iam_role.shipping_irsa.name
#policy_arn = aws_iam_policy.shipping_secrets_policy.arn
#}
