argocd/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: web-gateway
  namespace: app-space
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "mubashir.site, argocd.mubashir.site, grafana.mubashir.site, prometheus.mubashir.site, jaeger.mubashir.site, kiali.mubashir.site"
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
  #  - "*.mubashir.site"
    - "mubashir.site"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: mubashir-tls
    hosts:
 #   - "*.mubashir.site"
    - "mubashir.site"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web
  namespace: app-space
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  hosts:
  - mubashir.site
  gateways:
  - app-space/web-gateway
  http:
  - match:
    - uri:
        prefix: /api/catalogue/
    rewrite:
      uri: /
    route:
    - destination:
        host: catalogue
        port:
          number: 8080
  - match:
    - uri:
        exact: /api/catalogue
    rewrite:
      uri: /
    route:
    - destination:
        host: catalogue
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/user/
    rewrite:
      uri: /
    route:
    - destination:
        host: user
        port:
          number: 8080
  - match:
    - uri:
        exact: /api/user
    rewrite:
      uri: /
    route:
    - destination:
        host: user
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/cart/
    rewrite:
      uri: /
    route:
    - destination:
        host: cart
        port:
          number: 8080
  - match:
    - uri:
        exact: /api/cart
    rewrite:
      uri: /
    route:
    - destination:
        host: cart
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/shipping/
    rewrite:
      uri: /              # ✅ strip /api/shipping/ pass just remainder
    route:
    - destination:
        host: shipping
        port:
          number: 8080
  - match:
    - uri:
        exact: /api/shipping
    rewrite:
      uri: /
    route:
    - destination:
        host: shipping
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/payment/
    rewrite:
      uri: /              # ✅ strip /api/payment/ pass just remainder
    route:
    - destination:
        host: payment
        port:
          number: 8080
  - match:
    - uri:
        exact: /api/payment
    rewrite:
      uri: /
    route:
    - destination:
        host: payment
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/ratings/
    rewrite:
      uri: /
    route:
    - destination:
        host: ratings
        port:
          number: 80
  - match:
    - uri:
        exact: /api/ratings
    rewrite:
      uri: /
    route:
    - destination:
        host: ratings
        port:
          number: 80
  - match:
    - uri:
        prefix: /images
    route:
    - destination:
        host: web
        port:
          number: 3000
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: web
        port:
          number: 3000
      weight: 100
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger
  namespace: jaeger
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  hosts:
  - "jaeger.mubashir.site"
  gateways:
  - app-space/web-gateway
  http:
  - route:
    - destination:
        host: my-jaeger-query
        port:
          number: 16686
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: argo-cd
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  hosts:
  - "argocd.mubashir.site"
  gateways:
  - app-space/web-gateway
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  hosts:
  - "grafana.mubashir.site"
  gateways:
  - app-space/web-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: grafana
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  hosts:
  - "prometheus.mubashir.site"
  gateways:
  - app-space/web-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: prometheus-kube-prometheus-prometheus
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  hosts:
  - "kiali.mubashir.site"
  gateways:
  - app-space/web-gateway
  http:
  - route:
    - destination:
        host: kiali-server
        port:
          number: 20001
