argocd/istio.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: web-gateway
  namespace: app-space
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "mubashir.site, argocd.mubashir.site" 
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
  #  - "*.mubashir.site"
     - "app-space/mubashir.site"
     - "argo-cd/argocd.mubashir.site"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: mubashir-tls
    hosts:
 #   - "app-space/mubashir.site"
      - "argo-cd/argocd.mubashir.site"
      - "app-space/mubashir.site"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web
  namespace: app-space
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  hosts:
  - mubashir.site
  gateways:
  - app-space/web-gateway
  http:
  - match:
    - uri:
        prefix: /api/catalogue/
    rewrite:
      uri: /
    route:
    - destination:
        host: catalogue
        port:
          number: 8080
  - match:
    - uri:
        exact: /api/catalogue
    rewrite:
      uri: /
    route:
    - destination:
        host: catalogue
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/user/
    rewrite:
      uri: /
    route:
    - destination:
        host: user
        port:
          number: 8080
  - match:
    - uri:
        exact: /api/user
    rewrite:
      uri: /
    route:
    - destination:
        host: user
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/cart/
    rewrite:
      uri: /
    route:
    - destination:
        host: cart
        port:
          number: 8080
  - match:
    - uri:
        exact: /api/cart
    rewrite:
      uri: /
    route:
    - destination:
        host: cart
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/shipping/
    rewrite:
      uri: /              
    route:
    - destination:
        host: shipping
        port:
          number: 8080
  - match:
    - uri:
        exact: /api/shipping
    rewrite:
      uri: /
    route:
    - destination:
        host: shipping
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/payment/
    rewrite:
      uri: /             
    route:
    - destination:
        host: payment
        port:
          number: 8080
  - match:
    - uri:
        exact: /api/payment
    rewrite:
      uri: /
    route:
    - destination:
        host: payment
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/ratings/
    rewrite:
      uri: /
    route:
    - destination:
        host: ratings
        port:
          number: 80
  - match:
    - uri:
        exact: /api/ratings
    rewrite:
      uri: /
    route:
    - destination:
        host: ratings
        port:
          number: 80
  - match:
    - uri:
        prefix: /images
    route:
    - destination:
        host: web
        port:
          number: 3000
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: web
        port:
          number: 3000
      weight: 100

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: argo-cd
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  hosts:
  - "argocd.mubashir.site"
  gateways:
  - app-space/web-gateway
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          number: 80
